objects/ChargentOrders__Chargent_AC_Stages_Configuration__c.object
<CustomObject>
    <description>Contains the Chargent Automated Collections Stages Configuration</description>
    <fields>
        <fullName>ChargentOrders__CC_Email_Address__c</fullName>
        <description>The email sent during this stage will also be sent to this address.</description>
        <inlineHelpText>The email sent during this stage will also be sent to this address.</inlineHelpText>
        <label>CC Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Chargent_AC_Configuration__c</fullName>
        <label>Chargent AC Configuration</label>
        <referenceTo>ChargentOrders__Chargent_AC_Configuration__c</referenceTo>
        <relationshipLabel>Chargent AC Stages Configurations</relationshipLabel>
        <relationshipName>Chargent_AC_Stages_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Retry__c</fullName>
        <description>At this stage, Chargent will automatically attempt to charge the card / bank account on file for this Chargent Order record.</description>
        <inlineHelpText>At this stage, Chargent will automatically attempt to charge the card / bank account on file for this Chargent Order record.</inlineHelpText>
        <label>Retry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No Retry - Mark Order as Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Send_Email_on_Failed_Retry__c</fullName>
        <description>If the transaction attempted during this stage fails / is declined, Chargent will send the email template of your choice unless the “No Email” option is selected.</description>
        <inlineHelpText>If the transaction attempted during this stage fails / is declined, Chargent will send the email template of your choice unless the “No Email” option is selected.</inlineHelpText>
        <label>Send Email on Failed Retry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Sender_Email_Address__c</fullName>
        <description>If this stage is configured to send an email, this is the address that email will come from.</description>
        <inlineHelpText>If this stage is configured to send an email, this is the address that email will come from.</inlineHelpText>
        <label>Sender Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Stage_Number__c</fullName>
        <description>This field displays the stage number for this AC Process.</description>
        <formula>VALUE( ChargentOrders__Stage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field displays the stage number ​for this AC Process</inlineHelpText>
        <label>Stage Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Stage__c</fullName>
        <description>This field displays the stage # for this AC Process.</description>
        <inlineHelpText>This field displays the stage # for this AC Process.</inlineHelpText>
        <label>Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Time_frame__c</fullName>
        <description>Choose the type of time frame for this stage.</description>
        <inlineHelpText>Choose the type of time frame for this stage.</inlineHelpText>
        <label>Time frame</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName># Days After</fullName>
                    <default>true</default>
                    <label># Days After</label>
                </value>
                <value>
                    <fullName># Weeks After</fullName>
                </value>
                <value>
                    <fullName># Months After</fullName>
                </value>
                <value>
                    <fullName>Day of The Month</fullName>
                </value>
                <value>
                    <fullName>Day of The Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Time_frame_detail__c</fullName>
        <description>Specify the details for the Time Frame field. For instance, if “# Days After” is chosen in the Time Frame field, and “5” is entered in this field, this stage will execute 5 days after the last stage.</description>
        <inlineHelpText>Specify the details for the Time Frame field. For instance, if “# Days After” is chosen in the Time Frame field, and “5” is entered in this field, this stage will execute 5 days after the last stage.</inlineHelpText>
        <label>Time frame detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chargent AC Stages Configuration</label>
    <listViews>
        <fullName>ChargentOrders__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACSC-{0000}</displayFormat>
        <label>Chargent AC Stages Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chargent AC Stages Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>